[package]
name = "nanite"
version = "0.0.1"
authors = ["Matt <matt@mperez.io>"]
edition = "2018"
description = "A Rust toolkit for the Nano cryptocurrency"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
