[package]
name = "nanite"
version = "0.0.1"
authors = ["Matthew J Perez <matt@mperez.io>"]
edition = "2018"
description = "Toolkit for the Nano cryptocurrency"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattjperez/nanite"
keywords = ["crypto", "blockchain"]

[workspace]
members = [
	"crates/cli",
]

[dependencies]
ed25519 = "1.0.3"
rand = "0.8.3"
ed25519-dalek-blake2-feeless = "1.0.1"
blake2 = "0.9.1"
hex = "0.4.3"

[dependencies.ed25519-dalek]
version = "1"
